Fix questions list not showing in 'RevisarPregunta'

--- a/css/style.css
+++ b/css/style.css
@@ -653,6 +653,18 @@ form input[type="submit"], input[type="button"], input[type="reset"] {
 	width: 20%;
 }
 
+.deleteButton {
+	line-height: 12px;
+	width: 18px;
+	font-size: 8pt;
+	font-family: tahoma;
+	margin-top: 1px;
+	margin-right: 2px;
+	position:absolute;
+	top:0;
+	right:0;
+}
+
 /* mobile layout */
 @media only screen and (max-width: 412px) {
 
